added code to HTML file

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -33,6 +33,9 @@
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
           <li>git add -A : commits all files in the working branch.</li>
+          <li>git commit : commits all changes to our repository.</li>
+          <li>git pull origin main : sync our local branch with the remote branch in GitHub.</li>
+          <li>git push origin branchname  : push up all of our changes</li>
         </ul>
       </section>
 
