changes to html

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -31,11 +31,11 @@
         <h2>Git</h2>
         <ul>
           <li>git status: checks what branch we are currently on</li>
-          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-          <li>git add -A : commits all files in the working branch.</li>
-          <li>git commit : commits all changes to our repository.</li>
+          <li>git checkout -b branch-name : creates a new branch and switches to it</li>
+          <li>git add -A : stages changes before you commit</li>
+          <li>git commit : commits all changes to our local repository. use -m " " to add a message.</li>
           <li>git pull origin main : sync our local branch with the remote branch in GitHub.</li>
-          <li>git push origin branchname  : push up all of our changes</li>
+          <li>git push origin branch-name  : pushes up all of our changes to github</li>
         </ul>
       </section>
 
